--- a/.tex
+++ b/.tex
@@ -1,16 +1,19 @@
-(Precious Moments Safaris)
-     file--  
-         HOME         -index.html
-         OUR STORY    -our-story.html
-         EXPERIENCES  -experiences.html
-         DESTINATIONS -destinations.html
-         ABOUT US     -about.html
-         CONTACT US   -contact.html
-                      {Book-Today.html}
-                      {booking.html}
+[(Precious Moments Safaris)]
+     folder--(github)
+     folder--(CSS)
+     folder--(JS)
+     index.html
+     our-story.html
+     experiences.html
+     destinations.html
+     about.html
+     contact.html
+     {Book-Today.html}
+     {booking.html}
 
-folder-(Explore More Details)
-     file--
+    folder-(Explore More Details)
+         folder--(CSS)
+         folder--(JS)
          01-Day-name.html
          02-Day-name.html
          03-Day-name.html
@@ -23,11 +26,11 @@ folder-(Explore More Details)
          10-Day-name.html
          11-Day-name.html
          12-Day-name.html
-         {booking.html}--
 
          
-folder-(Explore Our National Parks)
-     file--
+    folder-(Explore Our National Parks)
+         folder--(CSS)
+         folder--(JS)
          Serengeti.html
          Saadani.html
          Katavi.html
@@ -40,8 +43,9 @@ folder-(Explore Our National Parks)
          Ruaha.html
             
           
-folder(QUICK LINKS)
-      file--
+    folder(QUICK LINKS)
+          folder--(CSS)
+          folder--(JS)
           Top-Safari-Packages.html
           Mount-Kilimanjaro-Treks.html
           Zanzibar-Holidays.html
@@ -50,4 +54,3 @@ folder(QUICK LINKS)
           Payment-and-Refund-policy.html
           FAQs.html
 
-          
